refactored everythin rewrote it with ai, now can control display brightness get nowplaying info and has and install script and more

--- a/com.hagak.mac2mqtt.plist
+++ b/com.hagak.mac2mqtt.plist
@@ -16,5 +16,22 @@
         <string>/tmp/mac2mqtt.job.err</string>
         <key>StandardOutPath</key>
         <string>/tmp/mac2mqtt.job.out</string>
+        <key>EnvironmentVariables</key>
+        <dict>
+            <key>PATH</key>
+            <string>/usr/local/bin:/opt/homebrew/bin:/usr/bin:/bin:/usr/sbin:/sbin</string>
+            <key>HOME</key>
+            <string>/Users/USERNAME</string>
+            <key>USER</key>
+            <string>USERNAME</string>
+            <key>LOGNAME</key>
+            <string>USERNAME</string>
+            <key>SHELL</key>
+            <string>/bin/zsh</string>
+        </dict>
+        <key>ProcessType</key>
+        <string>Background</string>
+        <key>ThrottleInterval</key>
+        <integer>10</integer>
     </dict>
 </plist>
