--- a/mac2mqtt.yaml
+++ b/mac2mqtt.yaml
@@ -1,8 +1,7 @@
-# your mqtt brocker ip no need for parethesis or anything like that
-mqtt_ip: mqtt_server
+mqtt_ip: 192.168.1.250
 mqtt_port: 1883
 mqtt_user: hass
-mqtt_password: password
-# the name you want to show up in home assistant
-hostname: Macbookair #optional if ommitted the hostname of the machine will be used
-discovery_prefix: homeassistant
+mqtt_password: Hex2048!
+mqtt_ssl: false
+hostname: macbook-air-2
+mqtt_topic: iot/MyMac
