--- a/mac2mqtt.yaml
+++ b/mac2mqtt.yaml
@@ -1,7 +1,7 @@
 mqtt_ip: 192.168.1.250
 mqtt_port: 1883
 mqtt_user: hass
-mqtt_password: Hex2048!
+mqtt_password: password
 mqtt_ssl: false
 hostname: macbook-air-2
 mqtt_topic: iot/MyMac
